# solana_ido

./: .gitignore  Anchor.toml  Readme.md  anchor_devnet.ts  demo.json  id.json  package-lock.json  package.json  program-keypair.json  testing.md
client/: client.ts  client_test.ts
migrations/: deploy.ts
programs/solana_ido/: Cargo.toml
programs/solana_ido/src/: errors.rs  lib.rs  state.rs
programs/solana_ido/src/instructions/: add_whitelist.rs  buy_token.rs  cancel_presale.rs  claim_token.rs  deposit_token.rs  finalize.rs  initialize.rs  mod.rs  refund_token.rs  remove_whitelist.rs  set_whitelist.rs  update_presale_details.rs  update_presale_period.rs  withdraw.rs  withdraw_token.rs
tests/: anchor.ts  anchor_local.ts  wallets.json
