[package]
name = "token_presale"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_presale"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
solana-program = "1.16.27"
anchor-spl = "0.29.0"
regex = "=1.8.4"
winnow = "=0.4.1"
toml_datetime = "=0.6.1"
blake3 = "=1.4.0"
constant_time_eq = "=0.2.6"